Add background images and overlays to all main sections
Implemented decorative background images for all main page sections using a unified HTML/CSS pattern with image wrappers and gradient overlays. Updated HTML and CSS for each section to support the new backgrounds, improved visual consistency, and ensured accessibility and readability. Added Midjourney instruction documentation and placed all images in the images/backgrounds directory.

--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
         <!-- ADVANTAGES - Почему выбирают нас -->
         <!-- ============================================ -->
         <section class="advantages" id="advantages">
+            <div class="advantages__image-wrapper">
+                <img src="images/backgrounds/advantages-background.png" alt="" class="advantages__image" loading="lazy">
+                <div class="advantages__overlay"></div>
+            </div>
             <div class="advantages__container">
                 <h2 class="advantages__title">Почему выбирают нас</h2>
                 <div class="advantages__grid">
@@ -241,6 +245,10 @@
         <!-- CALCULATOR - Калькулятор стоимости -->
         <!-- ============================================ -->
         <section class="calculator" id="calculator">
+            <div class="calculator__image-wrapper">
+                <img src="images/backgrounds/calculator-background.png" alt="" class="calculator__image" loading="lazy">
+                <div class="calculator__overlay"></div>
+            </div>
             <div class="calculator__container">
                 <h2 class="calculator__title">Калькулятор стоимости дома</h2>
                 <p class="calculator__subtitle">Рассчитайте примерную стоимость вашего будущего дома</p>
@@ -310,6 +318,10 @@
         <!-- PROJECTS - Типовые проекты домов -->
         <!-- ============================================ -->
         <section class="projects" id="projects">
+            <div class="projects__image-wrapper">
+                <img src="images/backgrounds/projects-background.png" alt="" class="projects__image" loading="lazy">
+                <div class="projects__overlay"></div>
+            </div>
             <div class="projects__container">
                 <h2 class="projects__title">Типовые проекты домов</h2>
                 <p class="projects__subtitle">Строительство от 3 месяцев. Выберите готовый проект или закажите индивидуальное проектирование</p>
@@ -343,6 +355,10 @@
         <!-- WORKS - Наши работы (реальные построенные дома) -->
         <!-- ============================================ -->
         <section class="works" id="works">
+            <div class="works__image-wrapper">
+                <img src="images/backgrounds/works-background.png" alt="" class="works__image" loading="lazy">
+                <div class="works__overlay"></div>
+            </div>
             <div class="works__container">
                 <h2 class="works__title">Наши работы</h2>
                 <p class="works__subtitle">Реальные дома, построенные нашей компанией. Каждый проект — это результат нашей работы и доверие наших клиентов.</p>
@@ -358,6 +374,10 @@
         <!-- SERVICES - Дополнительные услуги -->
         <!-- ============================================ -->
         <section class="services" id="services">
+            <div class="services__image-wrapper">
+                <img src="images/backgrounds/services-background.png" alt="" class="services__image" loading="lazy">
+                <div class="services__overlay"></div>
+            </div>
             <div class="services__container">
                 <h2 class="services__title">Дополнительные услуги</h2>
                 <div class="services__grid">
@@ -439,6 +459,10 @@
         <!-- PROCESS - Этапы строительства -->
         <!-- ============================================ -->
         <section class="process" id="process">
+            <div class="process__image-wrapper">
+                <img src="images/backgrounds/process-background.png" alt="" class="process__image" loading="lazy">
+                <div class="process__overlay"></div>
+            </div>
             <div class="process__container">
                 <h2 class="process__title">Этапы строительства</h2>
                 <p class="process__subtitle">От консультации до сдачи дома под ключ</p>
@@ -522,6 +546,10 @@
         <!-- ABOUT - О компании и команда -->
         <!-- ============================================ -->
         <section class="about" id="about">
+            <div class="about__image-wrapper">
+                <img src="images/backgrounds/about-background.png" alt="" class="about__image" loading="lazy">
+                <div class="about__overlay"></div>
+            </div>
             <div class="about__container">
                 <h2 class="about__title">О компании</h2>
                 
@@ -660,6 +688,10 @@
         <!-- REVIEWS - Отзывы -->
         <!-- ============================================ -->
         <section class="reviews" id="reviews">
+            <div class="reviews__image-wrapper">
+                <img src="images/backgrounds/reviews-background.png" alt="" class="reviews__image" loading="lazy">
+                <div class="reviews__overlay"></div>
+            </div>
             <div class="reviews__container">
                 <h2 class="reviews__title">Отзывы наших клиентов</h2>
                 <p class="reviews__subtitle">Что говорят о нас те, кто уже построил дом</p>
@@ -677,6 +709,10 @@
         <!-- FAQ - Часто задаваемые вопросы -->
         <!-- ============================================ -->
         <section class="faq" id="faq">
+            <div class="faq__image-wrapper">
+                <img src="images/backgrounds/faq-background.png" alt="" class="faq__image" loading="lazy">
+                <div class="faq__overlay"></div>
+            </div>
             <div class="faq__container">
                 <h2 class="faq__title">Часто задаваемые вопросы</h2>
                 <p class="faq__subtitle">Ответы на самые популярные вопросы о строительстве домов</p>
@@ -775,6 +811,10 @@
         <!-- CTA - Призыв к действию и формы -->
         <!-- ============================================ -->
         <section class="cta" id="cta">
+            <div class="cta__image-wrapper">
+                <img src="images/backgrounds/cta-background.png" alt="" class="cta__image" loading="lazy">
+                <div class="cta__overlay"></div>
+            </div>
             <div class="cta__container">
                 <div class="cta__content">
                     <h2 class="cta__title">Получите бесплатный проект дома и точный расчёт стоимости</h2>
@@ -849,6 +889,10 @@
         <!-- MAP - Карта объектов -->
         <!-- ============================================ -->
         <section class="map" id="map">
+            <div class="map__image-wrapper">
+                <img src="images/backgrounds/map-background.png" alt="" class="map__image" loading="lazy">
+                <div class="map__overlay"></div>
+            </div>
             <div class="map__container">
                 <h2 class="map__title">Карта объектов</h2>
                 <p class="map__subtitle">Наши построенные и строящиеся дома на карте Белгорода и области</p>
