Refactor header and hero sections for improved layout
Updated header and hero HTML structure and CSS for better desktop and mobile layouts. Adjusted spacing, font sizes, icon styles, and button appearance for improved visual hierarchy and responsiveness. Added new CSS classes for hero proof items and desktop navigation grid.

--- a/index.html
+++ b/index.html
@@ -159,22 +159,22 @@
                     </div>
                     <div class="hero__proof">
                         <div class="hero__proof-item">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <svg class="hero__proof-icon" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                            <span><strong>100%</strong> довольных клиентов</span>
+                            <span class="hero__proof-text"><strong class="hero__proof-number">100%</strong> довольных клиентов</span>
                         </div>
                         <div class="hero__proof-item">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <svg class="hero__proof-icon" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                            <span><strong>5 лет</strong> официальной гарантии</span>
+                            <span class="hero__proof-text"><strong class="hero__proof-number">5 лет</strong> официальной гарантии</span>
                         </div>
                         <div class="hero__proof-item">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <svg class="hero__proof-icon" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                            <span><strong>100%</strong> фиксированная цена</span>
+                            <span class="hero__proof-text"><strong class="hero__proof-number">100%</strong> фиксированная цена</span>
                         </div>
                     </div>
                     <div class="hero__cta">
