--- a/src/html/index.template.html
+++ b/src/html/index.template.html
@@ -13,6 +13,7 @@
         <!-- @include partials/services.html -->
         <!-- @include partials/process.html -->
         <!-- @include partials/about.html -->
+        <!-- @include partials/contacts.html -->
         <!-- @include partials/reviews.html -->
         <!-- @include partials/faq.html -->
         <!-- @include partials/cta.html -->
